start of the about page

--- a/src/routes/about/about.mdx
+++ b/src/routes/about/about.mdx
@@ -1,4 +1,13 @@
 # Hello, I'm Rafael 👋
 
-I'm a software engineer, currently working at Datadog, more specifically on RUM.
-I'm passionate about Software Development, programming languages and learning.
+
+Hi, I'm Rafael, a software engineer at Datadog based in Lisbon.
+Over the past few years, I've focused mainly on frontend development,
+but I consider myself a generalist, enjoying various aspects of software engineering.
+I occasionally write about what I'm learning, so feel free to check out my blog here.
+You can also connect with me on Twitter and LinkedIn.
+
+
+
+
+
