add first blog post page and style changes

--- a/src/routes/about/about.mdx
+++ b/src/routes/about/about.mdx
@@ -1,7 +1,8 @@
 import * as Avatar from '@radix-ui/react-avatar';
 
 
-<article className="flex flex-col items-center grow px-6">
+<article className="flex flex-col items-center grow px-6 gap-6">
+##  Hello 👋
 <div>
     <Avatar.Root className="AvatarRoot">
       <Avatar.Image
@@ -14,17 +15,14 @@ import * as Avatar from '@radix-ui/react-avatar';
       </Avatar.Fallback>
     </Avatar.Root>
   </div>
-<br/>
-##  Hello 👋
-<br/>
+<h4 className='text-lg'> I'm Rafael, a Software Engineer currently working for <a className='font-normal' href='https://www.datadoghq.com/' target='_blank'>
+<span className='text-[#632CA6]'>Datadog</span></a>.</h4>
 
-### I'm Rafael, a Software Engineer currently working for Datadog.
+I'm primarily interested in web development and programming languages/interpreters.
+I use this personal website as a mini-portfolio and occasionally write
+about what's on my mind to clear my thoughts and help consolidate my knowledge.
 
-I'm mostly interested in web-dev and programming languages/interpreters. I use this personal website as a mini-portfolio and also (sometimes)
-write about what's on my mind to clear my thoughts and help consolidate knowledge.
-
-If you wand to contact me you can reach out to me on <a href="https://www.linkedin.com/in/rafaelrahal/" target="_blank">Linkedin</a> or send me an <a target="_blank" href="mailto:rrrahal@gmail.com">e-mail</a>.
-
+If you want to contact me, you can reach out to me on <a href="https://www.linkedin.com/in/rafaelrahal" target="_blank">LinkedIn</a> or send me an <a href="mailto:rrrahal@gmail.com" target="_blank">email</a>.
 </article>
 
 
